 # [#24092] View administrator/index.php?option=com_languages&view=installed displays site AND admin language
 # [#24086] All administrators can read private message which they were not receiver
 # [#23896] JFormFieldLanguage error when no client attribut set.
 # [#24099] Adding * to follow internet convention for the registration required fields in front-end (Jean-Marie Simonet)

03-January-2011 Jean-Marie Simonet
 # [#24098] Extensions Manager does not discover languages correctly. Thanks Sam.
 # Correcting validation issue in [#24099]

02-January-2011 Jean-Marie Simonet
 # [#22509] No message generated on new article creation in the front end. Thanks Christophe.
 # Correcting some hathor headers.
 
02-January-2011 Christophe Demko
 # [#24068] Remove BitFolge library from SQL (Michael Babker)
 # [#23937] Fix some uses of JPATH_ROOT when there is a better alternative (Rouven Weßling)
 # [#23968] JRegistry::loadFile is not consistend with JRegistry::loadString
 # [#24046] Update TinyMCE to Version 3.3.9.3 (Rouven Weßling)

01-January-2011 Christophe Demko
 # [#24010] Error Message Missing for Image Upload (Janich Rasmussen)

01-January-2011 Jean-Marie Simonet
 # [#24055] Disabled languages display as choice in users params. Thanks Christophe.
 # [#24057] New CSS Needed for Private Messages in Bluestork
 # [#24061] Beez5 uses position-01 instead of position-1 in one location. Thanks Elin.
 # [#24058] Beez5 parameter problem. Thanks Elin and Christophe.
 # [#24028] Can't bulk delete users. Thanks Christophe.
 # [#23849] Toolbar images are not properly centered over their text in IE8 - Bluestork. Thanks Bill.
 #$ Allowing translation of PHPMAILER lang strings + correcting some strings values.

31-Dec-2010 Christophe Demko
 # [#24043] In Chrome, the pagination buttons are misaligned in admin Hathor plus remove duplicate css (Andrea Tarr)
 # [#24018] Alternate date format performing unexpectedly at category view/list layout (bill richardson)